non-msrv-tests/tests/ui/zeroize/duplicate_option.stderr
error: duplicate `drop` option
 --> tests/ui/zeroize/duplicate_option.rs:4:30
  |
4 | #[derive_where(Zeroize(drop, drop); T)]
  |                              ^^^^

error: duplicate `crate` option
 --> tests/ui/zeroize/duplicate_option.rs:8:44
  |
8 | #[derive_where(Zeroize(crate = "zeroize_", crate = "zeroize_"); T)]
  |                                            ^^^^^^^^^^^^^^^^^^

error: duplicate `drop` option
  --> tests/ui/zeroize/duplicate_option.rs:12:30
   |
12 | #[derive_where(Zeroize(drop, drop, crate = "zeroize_"); T)]
   |                              ^^^^

error: duplicate `crate` option
  --> tests/ui/zeroize/duplicate_option.rs:16:50
   |
16 | #[derive_where(Zeroize(drop, crate = "zeroize_", crate = "zeroize_"); T)]
   |                                                  ^^^^^^^^^^^^^^^^^^

error: duplicate `crate` option
  --> tests/ui/zeroize/duplicate_option.rs:20:44
   |
20 | #[derive_where(Zeroize(crate = "zeroize_", crate = "zeroize_", drop); T)]
   |                                            ^^^^^^^^^^^^^^^^^^

error: duplicate `drop` option
  --> tests/ui/zeroize/duplicate_option.rs:25:50
   |
25 | #[derive_where(Zeroize(crate = "zeroize_", drop, drop); T)]
   |                                                  ^^^^
